--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </main>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Wilmer León Chávez</a>.
+      Coded by <a href="https://github.com/Wisho1998">Wilmer León Chávez</a>.
     </div>
   </div>
 </body>
