--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="background">
     <main class="container">
-      <section class="card card--rounded">
+      <div class="card card--rounded">
         <img src="/images/logo.svg" class="card__logo" alt="logo">
         <div class="card__icons">
           <p class="card__icon">
@@ -28,8 +28,8 @@
             <img src="/images/icon-upload.svg" class="card__imageIcon" alt="icon upload">
           </p>
         </div>
-      </section>
-      <section class="card">
+      </div>
+      <div class="card">
         <p class="card__paragraph">
           You’ve used <span class="card__textBold">815 GB</span> of your storage
         </p>
@@ -44,7 +44,7 @@
           <span class="card__unitsNumber">185</span>
           <span class="card__unitsLeft">GB Left</span>
         </button>
-      </section>
+      </div>
     </main>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
