--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Fylo data storage component</title>
-  
+
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
+
 <body>
   <div class="background">
     <main class="container">
@@ -38,7 +41,7 @@
           <p class="card__ranges">
             <span class="card__range"> 0 GB </span>
             <span class="card__range">1000 GB</span>
-          </p>  
+          </p>
         </div>
         <button class="card__button">
           <span class="card__unitsNumber">185</span>
@@ -47,9 +50,10 @@
       </div>
     </main>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/Wisho1998">Wilmer León Chávez</a>.
     </div>
   </div>
 </body>
+
 </html>
